--- a/config/locales/errors.en.yml
+++ b/config/locales/errors.en.yml
@@ -2,3 +2,4 @@ en:
   errors:
     missing_param: "%{key} must be present in request parameters"
     invalid_date: "Given date is invalid. Valid format is dd-mm-yyyy"
+    data_parse_error: "Data processing error"
